--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "github-markdown-css": "^2.10.0",
+    "highlight.js": "^9.12.0",
     "marked": "^0.4.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
