--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "marked": "^0.4.0",
-    "node-sass": "^4.9.0",
+    "node-sass": "^4.9.1",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -41,6 +41,8 @@
     "react": "^16.4.1",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.4.1",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "resolve": "1.6.0",
     "sass-loader": "^7.0.3",
     "simplemde": "^1.11.2",
